# vkimg2d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: compile_shaders.bat  compile_shaders.sh
shaders/: fragment.glsl  sampler.glsl  vertex.glsl
shaders/effects/: bricon.glsl  coloffset.glsl  exposure.glsl  gamma.glsl  grayscale.glsl  huesat.glsl  invert.glsl  levels.glsl  posterize.glsl  sepia.glsl  sharpen.glsl  solarize.glsl  temperature.glsl  threshold.glsl  vibrance.glsl  vignette.glsl
shaders/include/: color.glsl  constants.glsl
src/: app.cpp  app.hpp  app_data.cpp  app_data.hpp  app_new.cpp  app_new.hpp  imgui_renderer.cpp  imgui_renderer.hpp  main.cpp  window.cpp  window.hpp
src/effect/: effect.cpp  effect.hpp  instance.cpp  instance.hpp  param.hpp  registry.cpp  registry.hpp
src/io/: binary.cpp  binary.hpp  image.cpp  image.hpp  path.hpp
src/vulkan/: device.cpp  device.hpp  glfw_surface.cpp  glfw_surface.hpp  include.hpp  renderer.cpp  renderer.hpp  renderpass.cpp  renderpass.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  vertex.hpp
src/vulkan/buffer/: buffer.cpp  buffer.hpp  commandbuffer.cpp  commandbuffer.hpp  commandpool.cpp  commandpool.hpp  framebuffer.cpp  framebuffer.hpp  texture.cpp  texture.hpp
src/vulkan/descriptor/: descriptor_layout.cpp  descriptor_layout.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp
src/vulkan/pipeline/: compute_pipeline.cpp  compute_pipeline.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  pipeline_set.hpp
src/vulkan/sync/: fence.cpp  fence.hpp  semaphore.cpp  semaphore.hpp
